--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "ext-xdebug": "*"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.5",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
