--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+STRIPE_KEY=stripe_key
+STRIPE_SECRET=stripe_secret
+STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
