Start using price id taken from request in checkout endpoint

--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,5 @@ VITE_APP_NAME="${APP_NAME}"
 STRIPE_KEY=stripe_key
 STRIPE_SECRET=stripe_secret
 STRIPE_WEBHOOK_SECRET=your-stripe-webhook-secret
+
+FRONTEND_HOST=http://localhost:5174
